--- a/styles/layout/_supheader.scss
+++ b/styles/layout/_supheader.scss
@@ -6,7 +6,7 @@
 		max-width: 1440px;
 		margin: 0 auto;
 		@include flex(row, center, center, 2rem);
-		padding: 1rem 0;
+		padding: 0.8rem 0;
 		padding-left: 8px;
 	}
 
