--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -5,6 +5,8 @@
 .welcome {
 	.welcome__inner {
 		.promotion {
+			margin-top: 0.5rem;
+			margin-top: 0.2rem;
 			@include flex(row, center, center, 1.2rem);
 			padding: 0.6rem 0;
 
@@ -54,7 +56,7 @@
 			background-color: #fff;
 
 			display: grid;
-			grid-template-columns: repeat(12, minmax(89px, 1fr));
+			grid-template-columns: repeat(12, 90px);
 			grid-template-rows: repeat(5, 90px);
 
 			.empty-box {
@@ -131,7 +133,7 @@
 
 .services {
 	.services__inner {
-		padding: 4.8rem 9.1rem;
+		padding: 4.4rem 9.1rem;
 		border: 1px solid #eee;
 		border-top: none;
 		display: flex;
